--- a/Notepad/Views/Home/List.cshtml
+++ b/Notepad/Views/Home/List.cshtml
@@ -45,6 +45,7 @@
     @* Block with sorting options *@
     <div id="thead" class="row notepad-entry">
         <div class="input-group col-sm-1">
+            &nbsp;
         </div>
         <div class="col-sm-2 Name">
             <a id="Name" href="#" class="change-order">
